--- a/app/src/main/res/layout/activity_imagen3_destacado.xml
+++ b/app/src/main/res/layout/activity_imagen3_destacado.xml
@@ -72,7 +72,7 @@
         android:layout_width="373dp"
         android:layout_height="106dp"
         android:layout_marginTop="60dp"
-        android:text="@string/sinopsis"
+        android:text="Una familia noble se ve envuelta en una guerra por el control del bien más valioso de la galaxia mientras su heredero se ve perturbado por visiones de un futuro oscuro."
         android:textAlignment="center"
         android:textColor="@color/white"
         android:textStyle="bold"
