--- a/app/src/main/res/layout/activity_loging.xml
+++ b/app/src/main/res/layout/activity_loging.xml
@@ -32,8 +32,8 @@
 
     <TextView
         android:id="@+id/textView4"
-        android:layout_width="325dp"
-        android:layout_height="46dp"
+        android:layout_width="318dp"
+        android:layout_height="28dp"
         android:layout_marginTop="12dp"
         android:text="Accede a una biblioteca de entretenimiento increíble, cuando quieras y donde quieras."
         android:textColor="@color/white"
@@ -140,25 +140,13 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Correo"></EditText>
 
-    <TextView
-        android:id="@+id/textView5"
-        android:layout_width="269dp"
-        android:layout_height="64dp"
-        android:layout_marginTop="12dp"
-        android:text="Tu contraseña debe contener al menos 8 caracteres e incluir un número o un carácter especial"
-        android:textColor="#878787"
-        android:textSize="12dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.408"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ContraseñaLog" />
 
     <Button
         android:id="@+id/BotonCrearCuent"
         android:layout_width="154dp"
         android:layout_height="47dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginBottom="52dp"
         android:backgroundTint="#322C4C"
         android:elevation="2dp"
         android:shadowColor="#5C5C5C"
@@ -168,16 +156,18 @@
         android:textStyle="bold"
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/atras"
+        app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.118" />
+        app:layout_constraintTop_toBottomOf="@+id/ContraseñaLog"
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/atras"
         android:layout_width="154dp"
         android:layout_height="47dp"
-        android:layout_marginStart="24dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="52dp"
         android:backgroundTint="#322C4C"
         android:elevation="2dp"
         android:shadowColor="#5C5C5C"
@@ -188,12 +178,8 @@
         app:cornerRadius="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/BotonCrearCuent"
-        app:layout_constraintTop_toBottomOf="@+id/textView5"
-        app:layout_constraintVertical_bias="0.0" />
-
-
+        app:layout_constraintTop_toBottomOf="@+id/ContraseñaLog"
+        app:layout_constraintVertical_bias="1.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
