--- a/app/src/main/res/layout/activity_perfil.xml
+++ b/app/src/main/res/layout/activity_perfil.xml
@@ -84,17 +84,73 @@
         android:layout_width="228dp"
         android:layout_height="35dp"
         android:layout_marginTop="12dp"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textColor="@color/white"
         android:paddingTop="9dp"
+        android:textAlignment="center"
+        android:textColor="@color/white"
         android:textSize="15dp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/imagenCasa4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textoApellido"
         app:layout_constraintVertical_bias="0.019" />
+
+
+    <EditText
+        android:id="@+id/cambiarNombreTexto"
+        android:layout_width="303dp"
+        android:layout_height="49dp"
+        android:background="@drawable/edit_text_borde"
+        android:hint="Introduce Nombre"
+        android:inputType="text"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:textColor="@color/white"
+        android:textColorHint="#878787"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textoEmail"
+        app:layout_constraintVertical_bias="0.173" />
+    <Button
+        android:id="@+id/cambiarNombre"
+        android:layout_width="196dp"
+        android:layout_height="42dp"
+        android:backgroundTint="#322C4C"
+        android:elevation="2dp"
+        android:shadowColor="#5C5C5C"
+        android:text="Cambiar Nombre"
+        android:textColor="@color/white"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        app:cornerRadius="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/imagenCasa4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cambiarNombreTexto"
+        app:layout_constraintVertical_bias="0.341" />
+    <Button
+        android:id="@+id/cambiar"
+        android:layout_width="196dp"
+        android:layout_height="42dp"
+        android:backgroundTint="#322C4C"
+        android:elevation="2dp"
+        android:shadowColor="#5C5C5C"
+        android:text="Cambiar "
+        android:textColor="@color/white"
+        android:textSize="14dp"
+        android:textStyle="bold"
+        android:visibility="invisible"
+        app:cornerRadius="5dp"
+        app:layout_constraintBottom_toTopOf="@+id/imagenCasa4"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cambiarNombreTexto"
+        app:layout_constraintVertical_bias="0.341" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
